se agregan medios de pago de forma dinamica, pero el front esta horrible, mañana pongo un modal

--- a/src/main/resources/public/css/estilo-medio-pago.css
+++ b/src/main/resources/public/css/estilo-medio-pago.css
@@ -1,5 +1,6 @@
 body{
-background-image: url("https://wallpapercave.com/wp/wp6928859.png");
+  background: white;
+  font-family: "Lato", sans-serif;
 }
 
 .titulo{
