--- a/src/main/resources/templates/index-crear-egreso.hbs
+++ b/src/main/resources/templates/index-crear-egreso.hbs
@@ -74,7 +74,7 @@
     </div>
 </nav>
 <form action="/crearEgreso1" method="post" class="form">
-    <div class="d-flex justify-content-center" style="padding: 64px">
+    <div class="d-flex justify-content-center" style="padding-top: 64px;padding-bottom: 16px">
         <div class="card text-dark bg-light-tp mb-3"
              style="min-height: 18rem; min-width: 36rem; max-width: 70%">
             <div class="card-header display-7 text-center"> Creación de Operación de Egreso</div>
