ajusto rutas del boton volver + redondeo algunos endpoints del cargar egreso

--- a/src/main/resources/templates/index-seleccionar-proveedores.hbs
+++ b/src/main/resources/templates/index-seleccionar-proveedores.hbs
@@ -27,7 +27,7 @@
         <div class="space-around-horizontal navbar-nav ml-auto">
             <a class="navbar-brand" onclick="location.href='/home'">Home</a>
             <button type="button" class="btn btn-dark align-content-center"
-                    onclick="location.href='crearOperacionEgreso'">Seleccionar un Presupuesto
+                    onclick="location.href='crearOperacionEgreso'">Cargar Operacion de Egreso
             </button>
             <button type="button" class="btn btn-dark align-content-center" onclick="location.href='ingreso'">
                 Cargar Operacion de Ingreso
@@ -106,12 +106,15 @@
         </div>
     </div>
     <div class="d-flex justify-content-evenly padding-button-home">
-        <button class="btn btn-dark rounded-pill" onclick="location.href='/crearEgreso1'">Volver</button>
+        <button class="btn btn-dark rounded-pill" onclick="location.href='CrearOperacionEgreso'">Volver</button>
 
         <button class="btn btn-dark rounded-pill" type="submit">Siguiente</button>
     </div>
 </form>
 
+<div class="d-flex justify-content-center padding-button-home">
+    <button type="button" class="btn btn-lg btn-dark rounded-pill" onclick="location.href='/home'">Volver a Home</button>
+</div>
 <!-- Modal -->
 <form action="/cachePresupuestos" method="post" class="form">
     <div class="modal fade" tabindex="-1" aria-labelledby="exampleModalLabel"
@@ -215,10 +218,6 @@
 
 </script>
 
-<div class="d-flex justify-content-center padding-button-home">
-    <button class="btn btn-lg btn-dark rounded-pill" onclick="location.href='/home'">Volver a Home</button>
-</div>
-</div>
 
 </body>
 </html>
