--- a/src/main/resources/public/css/estilo-categoria.css
+++ b/src/main/resources/public/css/estilo-categoria.css
@@ -1,12 +1,22 @@
-body{
-background-image: url("https://wallpapercave.com/wp/wp6928859.png");
+body {
+  background: white;
+  font-family: "Lato", sans-serif;
+  height: 100%;
+  min-height: 100%;
 }
-
+html{
+  height: 100%;
+}
 .titulo{
   background: none;
   text-align: center;
 }
 
+
+
+.bg-light-tp{
+  background-color: #f8f9fa;
+}
 .nombre-titulo{
   font-size:3em;
   color: black;
