--- a/src/main/resources/templates/crear-medio-pago.hbs
+++ b/src/main/resources/templates/crear-medio-pago.hbs
@@ -117,7 +117,7 @@
         </div>
     </div>
     <div class="d-flex justify-content-evenly padding-button-home">
-        <button class="btn btn-dark rounded-pill" onclick="location.href='/crearEgreso2'">Volver</button>
+        <button type="button" class="btn btn-dark rounded-pill" onclick="location.href='/crearEgreso2'">Volver</button>
 
         <button class="btn btn-dark rounded-pill" type="submit">Siguiente</button>
     </div>
