--- a/src/main/resources/templates/cargar-criterio.hbs
+++ b/src/main/resources/templates/cargar-criterio.hbs
@@ -18,8 +18,7 @@
 
     <script src="/js/logic.js"></script>
     <link rel="stylesheet" href="/css/estilo-categoria.css">
-    <link rel="stylesheet" href="/css/estilo-organizacion.css">
-    <link rel="stylesheet" href="/css/estilo-login.css">
+    <link rel="stylesheet" href="/css/estilo-visualizar-egreso.css">
 
     <!-- CSS only -->
     <title>Categorias</title>
@@ -103,7 +102,7 @@
 
 
                     </div>
-                    <div class="d-flex justify-content-center m-4" style="padding-top: 64px">
+                    <div class="d-flex justify-content-center m-4" style="padding-top: 64px;  width:-webkit-fill-available">
                         <button type="button" class="btn btn-dark" data-bs-toggle="modal"
                                 data-bs-target="#catModal">
                             Agregar nueva Categoria
@@ -116,7 +115,7 @@
     <div class="d-flex justify-content-evenly padding-button-home">
         <button  type="button" class="btn btn-dark rounded-pill" onclick="location.href='/crearEgreso3'">Volver</button>
 
-        <button class="btn btn-dark rounded-pill" type="submit">Siguiente</button>
+        <button class="btn btn-outline-dark rounded-pill" type="submit">Guardar Egreso</button>
     </div>
 </form>
 
