--- a/src/main/resources/templates/cargar-ingreso.hbs
+++ b/src/main/resources/templates/cargar-ingreso.hbs
@@ -36,7 +36,7 @@
    </form>
      </div><br><br><br><br><br>
          <div class="general-home">
-         <button class="boton_home" onclick="location.href='/home'">Volver a Home</button>
+         <button class="boton_home" type="button" onclick="location.href='/home'">Volver a Home</button>
          </div>
          </div>
     </body>
