--- a/src/main/resources/templates/index-crear-egreso.hbs
+++ b/src/main/resources/templates/index-crear-egreso.hbs
@@ -82,6 +82,13 @@
                 <div class="space-evenly-vert align-items-start">
                     <div class="" style="padding-right: 0;width: -webkit-fill-available">
                         <div class="d-flex justify-content-between">
+                            <p class="card-text">Descripcion:</p>
+                            <label>
+                                <input type="text" name="descripcion" required="required">
+                            </label>
+                        </div>
+
+                        <div class="d-flex justify-content-between">
                             <p class="card-text">Fecha de Operacion:</p>
                             <label>
                                 <input type="date" name="fecha" required="required">
