--- a/src/main/resources/templates/index-seleccionar-proveedores.hbs
+++ b/src/main/resources/templates/index-seleccionar-proveedores.hbs
@@ -106,7 +106,7 @@
         </div>
     </div>
     <div class="d-flex justify-content-evenly padding-button-home">
-        <button class="btn btn-dark rounded-pill" onclick="location.href='CrearOperacionEgreso'">Volver</button>
+        <button type="button" class="btn btn-dark rounded-pill" onclick="location.href='CrearOperacionEgreso'">Volver</button>
 
         <button class="btn btn-dark rounded-pill" type="submit">Siguiente</button>
     </div>
