--- a/src/main/resources/public/css/estilo-comprobante.css
+++ b/src/main/resources/public/css/estilo-comprobante.css
@@ -1,5 +1,11 @@
-body{
-background-image: url("https://wallpapercave.com/wp/wp6928859.png");
+body {
+  background: white;
+  font-family: "Lato", sans-serif;
+  height: 100%;
+  min-height: 100%;
+}
+html{
+  height: 100%;
 }
 
 .titulo{
